1er Integracion Responsive
Se hizo un cambio en el Grid de 3 filas 1 columna para adaptar a dispositivos moviles.

--- a/style.css
+++ b/style.css
@@ -214,3 +214,149 @@ input:focus {
     text-shadow: 0px -4px 0px #000000, 1px -6px 0px #000000, -1px -6px 0px #000000;
     z-index: 999;
 }
+
+/* ---------//// RESPONSIVE ////--------- */
+
+@media screen and (max-width: 550px) {
+    body{
+        grid-template-columns: 100vw;
+        grid-template-rows: 100px 1fr 100px;
+    
+        grid-template-areas: "header"
+                            "main"
+                            "side";   
+
+       box-sizing: border-box;
+    }
+
+    .side-menu{
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border: 0px green solid;
+        
+    }
+
+    .main{
+        max-height: calc(100vh - 200px);
+        box-sizing: border-box;            
+    }
+
+    .side-menu__nav{
+  
+        flex-direction: row;
+        margin-top: 0px;
+      /*   border: 3px black solid; */
+    }
+
+    .nav__item{
+        width: 50px;
+        margin-bottom: 0px;
+
+       /*  border: 1px black solid; */
+        
+    }
+
+    .side-menu__nav img{
+        width: 25px;
+        /* border: 1px white solid; */
+    }
+    
+    .side-menu__nav p{
+        font-size: 8px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
+    }
+
+
+
+    
+    .main__container{
+        width: 100%;
+        padding: 0px;
+        /* border: 1px red solid; */
+    }
+    
+    .main__container--item{
+        margin: 5px;
+        margin-bottom: 10px;
+        border: 0px black solid;
+    }
+    
+    .main__container img{
+        width: 100%;
+    }
+    
+    .main__container p{
+        width: 100%;
+
+    }
+
+       
+
+    .header__logo{
+        display: flex;
+        margin-left: 10px;
+    }
+
+    .header__logo img{
+        height: 60px;
+    }
+
+    .header__logo p{
+        width: 120px;
+        padding: 10px 0;
+        font-size: 25px;
+        line-height: 20px;
+        /* border: 1px red solid; */
+    }
+
+
+
+    .header__search input{
+        display: none;
+    }
+
+    .header__profile{
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
+    }
+
+
+
+    .header__profile img{
+
+
+    }
+
+    .header__profile a{
+        margin-right: 0px;
+
+    }
+
+
+
+
+
+
+        .side-menu__config{
+            margin-bottom: 0px;
+        }
+
+        .config__item{
+            width: 50px;
+        }
+
+        .config__item p{
+            font-size: 8px;
+        }
+
+        .config__item img{
+            width: 25px;
+        }
+
+
+
+}
