--- a/style.css
+++ b/style.css
@@ -238,7 +238,8 @@ input:focus {
     }
 
     .main{
-        max-height: calc(100vh - 200px);
+        height: calc(100vh - 200px);
+        max-height: calc(var(--vh, 1vh) * 100);
         box-sizing: border-box;            
     }
 
@@ -325,10 +326,11 @@ input:focus {
     }
 
 
-
     .header__profile img{
+        width: 40px;
+        height: 40px;
 
-
+        margin: 0px 10px;
     }
 
     .header__profile a{
@@ -337,26 +339,20 @@ input:focus {
     }
 
 
+    .side-menu__config{
+        margin-bottom: 0px;
+    }
 
+    .config__item{
+        width: 50px;
+    }
 
+    .config__item p{
+        font-size: 8px;
+    }
 
-
-        .side-menu__config{
-            margin-bottom: 0px;
-        }
-
-        .config__item{
-            width: 50px;
-        }
-
-        .config__item p{
-            font-size: 8px;
-        }
-
-        .config__item img{
-            width: 25px;
-        }
-
-
+    .config__item img{
+        width: 25px;
+    }
 
 }
