--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ input:focus {
     }
 
     .main{
-        height: calc(100vh - 200px);
+        height: 100%;
         max-height: calc(var(--vh, 1vh) * 100);
         box-sizing: border-box;            
     }
