--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ input:focus {
     }
 
     .main{
-        min-height: 100vh;
+        height: calc(100vh - 200px);
+        /*min-height: 100vh;*/
         min-height: -webkit-fill-available;
         /*height: calc(100vh - 200px);*/
         /*height: calc(100 * var(--vh));*/
