--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 }
 
 body{
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
     display: grid;
     grid-template-columns: 150px 1fr;
     grid-template-rows: 100px 1fr;
@@ -17,10 +15,6 @@ body{
 
     grid-template-areas: "header header"
                         "side main";   
-}
-
-html {
-  height: -webkit-fill-available;
 }
 
 /* ---------//// HEADER ////--------- */
@@ -240,15 +234,16 @@ input:focus {
         align-items: center;
         justify-content: center;
         border: 0px green solid;
+        position: fixed;
+        bottom: 0px;
+        width: 100%;
+        height: 100px;
         
     }
 
     .main{
         height: calc(100vh - 200px);
-        /*min-height: 100vh;*/
-        min-height: -webkit-fill-available;
-        /*height: calc(100vh - 200px);*/
-        /*height: calc(100 * var(--vh));*/
+        /* max-height: calc(var(--vh, 1vh) * 100); */
         box-sizing: border-box;            
     }
 
